Fix unintentional jumps on mobile chrome [2]

--- a/src/components/template/Experience.css
+++ b/src/components/template/Experience.css
@@ -5,11 +5,10 @@
     margin-top: 35px;
 }
 @media only screen and (max-width: 1169px) {
-    /* .vertical-timeline--animate */
-  .vertical-timeline-element-content.bounce-in {
+    .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
       visibility: visible;
-      -webkit-animation: cd-bounce-2-inverse 0.6s;
-      -moz-animation: cd-bounce-2-inverse 0.6s;
-      animation: cd-bounce-2-inverse 0.6s;
+      -webkit-animation: none !important;
+      -moz-animation: none !important;
+      animation: none !important;
     }
   }
